--- a/AppMascotas/AppMascotas.Android/AppMascotas.Android.csproj
+++ b/AppMascotas/AppMascotas.Android/AppMascotas.Android.csproj
@@ -104,5 +104,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\camara.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\id.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\registro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mj.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\google.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
